--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,8 +43,8 @@ jobs:
             - checkout
             - run: conda update conda
             - run: conda install python=3.6 --yes
+            - run: conda remove ruamel_yaml --yes
             - run: conda install pytorch --yes
-            - run: conda remove ruamel-yaml --yes
             - run: pip install virtualenv
             - run: python -m virtualenv venv --system-site-packages
             - run: "& venv/Scripts/activate.ps1"
@@ -63,8 +63,8 @@ jobs:
             - checkout
             - run: conda update conda
             - run: conda install python=3.6 --yes
+            - run: conda remove ruamel_yaml --yes
             - run: conda install pytorch --yes
-            - run: conda remove ruamel-yaml --yes
             - run: pip install virtualenv
             - run: python -m virtualenv venv --system-site-packages
             - run: "& venv/Scripts/activate.ps1"
